samples/_failures_safe/1761372041_15f204_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f35294c0.c: In function ‘main’:
./samples/SAFE/__tmp_f35294c0.c:167:5: error: expected declaration or statement at end of input
  167 |     }
      |     ^
